# ArchitextGen

./: .gitignore  CMakeLists.txt  README.md
resources/: icons.qrc
src/: CMakeLists.txt
src/ArchBuilder/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/GenCore/: CMakeLists.txt  GeneratorEngine.cpp  GeneratorEngine.h  MetaTypes.h
templates/: CMakeLists.txt  README.md
templates/Core_Business/: class.cpp.tpl  class.h.tpl
templates/Data_Persistence/: CMakeLists.txt  DataSetting.cpp  DataSetting.h  Datemanager.cpp  Datemanager.h  NewClass1.cpp  NewClass1.h  NewClass2.cpp  NewClass2.h  class.cpp.tpl  class.h.tpl
templates/External_Integration/: class.cpp.tpl  class.h.tpl
templates/Hardware_Abstraction/: class.cpp.tpl  class.h.tpl
templates/System_Infrastructure/: class.cpp.tpl  class.h.tpl
templates/User_Interaction/: class.cpp.tpl  class.h.tpl
templates/cmake/: ArchitectGenLibrariesConfig.cmake.in
